# blog

./: .buildinfo  404.html  README.md  _config.yml  _toc.yml  abtest.html  deploy.sh  genindex.html  hypothesis_testing.html  hypothesistesting.html  index.html  interactivity_test.ipynb  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pvalues.html  pyproject.toml  search.html  searchindex.js  test.html
.github/workflows/: deploy.yml
_build/.doctrees/: abtest.doctree  environment.pickle  hypothesis-testing.doctree  hypothesis_testing.doctree  hypothesistesting.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  pvalues.doctree  test.doctree
_build/html/: .buildinfo  abtest.html  genindex.html  hypothesis-testing.html  hypothesistesting.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pvalues.html  search.html  searchindex.js  test.html
_build/html/_sources/: test.ipynb
_build/jupyter_execute/: abtest.ipynb  hypothesis-testing.ipynb  hypothesis_testing.ipynb  hypothesistesting.ipynb  markdown-notebooks.ipynb  notebooks.ipynb  pvalues.ipynb  test.ipynb
_sources/: hypothesis-testing.ipynb  hypothesistesting.ipynb  pvalues.ipynb
_static/: style.css
blog/: mkdocs.yml
blog/docs/: abtest.ipynb  index.md  intro.md  test.ipynb
blog/docs/genart/: fractals.ipynb
genart/fractals/: index.html
javascript/: mathjax.js
math/abtest/: index.html
math/hypothesistesting/: index.html
math/pvalues/: index.html
